# stickynotes

./: .gitignore  APP_FLOW.md  DESIGN_SYSTEM.md  FRONTEND_GUIDELINES.md  LESSONS.md  PRD.md  README.md  TECH_STACK.md  index.html  install.sh  package-lock.json  package.json  progress.txt  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  notes.rs  storage.rs  tray.rs  window.rs
src/components/: ContextMenu.tsx  NoteEditor.tsx  NoteToolbar.tsx  NoteWindow.tsx  NotesList.tsx  ThemePicker.tsx  ToolbarIcons.tsx
src/hooks/: useNote.ts  useWindowControls.ts
src/lib/: browser-mock.ts  colors.ts  commands.ts  constants.ts  preferences.ts
src/styles/: global.css
