[package]
name = "stickynotes"
version = "0.1.0"
description = "Floating sticky notes with terminal aesthetic"
authors = ["jan"]
edition = "2021"

[lib]
name = "stickynotes_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
url = "2.5.8"
base64 = "0.22"

[profile.release]
lto = true
strip = true
codegen-units = 1
